--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body style="margin: 0; overflow: hidden;">
     <a-scene embadded 
-		arjs="matrixCodetype: 3x3;"
+		arjs="dtectionMoode : mono_and_matrix;
+		      matrixCodetype: 3x3;"
 		vr-mode-ui="enabled: false">
        <a-marker type="barcode" value="5"
 	   <a-box position="0 0.5 0"
