--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <a-scene embadded 
 		arjs="dtectionMoode : mono_and_matrix;matrixCodetype: 3x3;"
 		vr-mode-ui="enabled: false">
+       <a-marker type="barcode" value="3"
+	 <a-image src="F4_171003_0026.jpg"></a-image>
+       </a-marker
        <a-marker type="barcode" value="5"
 	   <a-box position="0 0.5 0"
 	        material="color: blue;">
