--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		      matrixCodetype: 3x3;"
 		vr-mode-ui="enabled: false">
          <a-marker type="barcode" value="3"
-	 <a-image src="mos.gif"></a-image>
+	 <a-image src="mos1.png"></a-image>
        </a-marker
        <a-marker type="barcode" value="5"
 	   
