--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		arjs="dtectionMoode : mono_and_matrix;
 		      matrixCodetype: 3x3;"
 		vr-mode-ui="enabled: false">
-         <a-marker type="barcode" value="3"
+         <a-marker type="barcode" value="3">
 	 <a-image src="mos1.png"></a-image>
        </a-marker
        <a-marker type="barcode" value="5"
